#Captain[CHORE]: 내용 수정

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 **/node_modules
 
-.DS_Store
 **/.idea
 **/build/
 **/.iml
@@ -10,3 +9,5 @@
 **/.settings/
 **/target/
 
+**/.DS_Store
+**/.desktop_ini
